--- a/readme
+++ b/readme
@@ -1,2 +1,1 @@
-This is simple bulletin board system(bulletinBoard1.zip). It was a project for database course i conducted on fall 2016. 
-I used java, sql, html and thymeleaf. Feel free to use it anyway you like!
+This is simple bulletin board system(bulletinBoard1.zip). It was a project for database course i conducted on fall 2016.I used java, sql, html and thymeleaf.
