--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
-This is simple bulletin board system(bulletinBoard1.zip). It was a project for database course i conducted on fall 2016.I used java, sql, html and thymeleaf.
+This is simple bulletin board system(bulletinBoard1.zip). It was a project for database course i conducted on fall 2016.
+I used java, sql, html and thymeleaf to put it together.
