--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-This is simple bulletin board system(bulletinBoard1.zip). It was a project for database course i conducted on fall 2016. I used java, sql, html and thymeleaf to make it.
+This is simple bulletin board system(bulletinBoard1.zip). It was a project for database course i conducted on fall 2016. I used java, sql, html and thymeleaf to make it.The web address for this project is https://hidden-shelf-41268.herokuapp.com
